Infrastructure/Modules/Network/elastic-ip.tf
resource "aws_eip" "elastic_ip_1a" {
  domain = "vpc"
}

resource "aws_eip" "elastic_ip_1b" {
  domain = "vpc"
}
